--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,7 +48,7 @@ jobs:
   
       - name: Deploy to server
         run: |
-            ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa kk@3.110.81.91 << 'EOF'
+            ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa ubuntu@3.110.81.91 << 'EOF'
               docker stop myappcontainer || true
               docker rm myappcontainer || true
               docker run -d --name kundan_website -p 8081:8081 docker.io/kundankkkrishna/newapp:latest
