--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,7 +41,7 @@ jobs:
 #       - name: delete previous deployments
 #         run: kubectl delete -f kube
       - name: check directory
-        run: pwd && ls -al . && sudo find / -name kube -print
+        run: pwd && ls -al . && sudo find / -name kube -print && cd /usr/src/path/
 
       - name: stetup minikube
         id: minikube
