--- a/kube/services.yaml
+++ b/kube/services.yaml
@@ -5,9 +5,10 @@ metadata:
   labels:
     app: myapp
 spec:
-  type: LoadBalancer
+  type: NodePort
   ports:
     - port: 8081
       targetPort: 8081
+      nodePort: 31088
   selector:
     app: myapp
